--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Open Graph para redes sociales -->
     <meta property="og:title" content="Telares Curihuinca | Textileria Mapuche">
     <meta property="og:description" content="Descubre piezas únicas elaboradas por manos indígenas que preservan técnicas ancestrales.">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80">
+    <meta property="og:image" content="https://lowespa.github.io/artesania/assets/img/og-image.png">
     <meta property="og:url" content="https://www.raicesvivas.com">
     <meta property="og:type" content="website">
     
@@ -324,4 +324,5 @@
     <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
+
 </html>
